# fnn

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/train_digital_twin/: config.yaml
demos/: 1 - download_microns_digital_twin.ipynb  2 - use_microns_digital_twin.ipynb  3 - microns_digital_twin_properties.ipynb  4 - prepare_data_to_train_digital_twin.ipynb  5 - train_digital_twin.ipynb  6 - evaluate_digital_twin.ipynb  tinker.ipynb
deploy/: docker-compose.yml
fnn/: bounds.py  containers.py  cores.py  elements.py  features.py  feedforwards.py  grids.py  modulations.py  monitors.py  optimizers.py  perspectives.py  positions.py  readouts.py  recurrents.py  reductions.py  responses.py  retinas.py  streams.py  utils.py  variables.py
fnn/data/: __init__.py  avi.py  dataset.py
fnn/evaluate/: __init__.py
fnn/load/: __init__.py  microns.py  modulation.py
fnn/microns/: __init__.py  load.py
fnn/model/: architectures.py  bounds.py  cores.py  elements.py  features.py  feedforwards.py  grids.py  luminances.py  modulations.py  modules.py  monitors.py  networks.py  optimizers.py  parameters.py  pixels.py  (+10 more)
networks/: bounds.py  containers.py  cores.py  elements.py  features.py  feedforwards.py  grids.py  modulations.py  modulators.py  monitors.py  perspectives.py  positions.py  readouts.py  recurrents.py  retinas.py  shifters.py  standardization.py  utils.py  variables.py
scripts/: config.yaml  download_digital_twin_training_example_data.sh  download_microns_digital_twin_properties.sh  train_digital_twin.py
training/: optimizers.py
(+8 files in other folders)
